# openagi

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MISSION.md  Makefile  NOTICE  NewClaw-Trinity-使用说明书-思维导图.html  PRODUCT_SPEC.md  README.ja-JP.md  README.md  README.zh-CN.md  W16_REPORT.md  docker-compose.yml  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  spirit.html  start-backend.sh  tailwind.config.js  vite.config.ts
.claude/: launch.json
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 10-day-dev-plan.md  ACKNOWLEDGMENTS.md  C1-UX-Trinity-interaction-spec.md  M1-B2-economy-dashboard-prototype.md  M1-alpha-atomic-tasks.md  M2-A4-security-review-checklist.md  M2-alpha-atomic-tasks.md  MVP_CORE_ARCHITECTURE.md  NewClaw-v7.0-软件开发说明书.md  OpenAGI-MVP核心骨架树-思维导图-验收标准-gpt.md  OpenAGI-MVP核心骨架树-思维导图-验收标准.md  OpenAGI-MVP验收标准-v2-m2.md  OpenAGI-MVP验收标准-v2-m4.md  OpenAGI-MVP验收标准-v3-m2.md  OpenAGI-MVP验收标准-v3-m4.md  OpenAGI-MVP验收标准.md  OpenAGI-软件开发说明书.md  P0_completion_criteria.md  W15_REPORT.md  W17_REPORT.md  ab-integration-strategy.md  b-team-asset-manifest.md  b-team-sprint-3-plan.md  benchmark-models-page-mindmap.md  digital-companion-desktop.md  false_claims_log.md  i18n-trinity-architecture-review.md  i18n-trinity-keys-full-zh.json  kanban.md  master-sitemap-v2-channels.md  master-sitemap-v2-models-agents.md  master-sitemap-v2-settings-ops.md  master-sitemap-v2-skills-cron.md  (+15 more)
(+408 files in other folders)
