[package]
name = "openagi-desktop"
version = "0.1.0"
description = "OpenAGI Desktop Digital Companion"
authors = ["OpenAGI Team"]
edition = "2021"

[lib]
name = "openagi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
